package br.com.usinasantafe.cvf._e2e_

import android.util.Log
import androidx.compose.ui.test.junit4.v2.createAndroidComposeRule
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextInput
import br.com.usinasantafe.cav.utils.waitUntilTimeout
import br.com.usinasantafe.cvf.di.provider.BaseUrlModuleTest
import br.com.usinasantafe.cvf.external.room.dao.stable.ColabDao
import br.com.usinasantafe.cvf.external.room.dao.stable.EquipDao
import br.com.usinasantafe.cvf.external.room.dao.stable.FrontDao
import br.com.usinasantafe.cvf.external.room.dao.stable.ReleaseDao
import br.com.usinasantafe.cvf.infra.datasource.sharedpreferences.ConfigSharedPreferencesDatasource
import br.com.usinasantafe.cvf.infra.datasource.sharedpreferences.ManagerSharedPreferencesDatasource
import br.com.usinasantafe.cvf.infra.models.sharedpreferences.ConfigSharedPreferencesModel
import br.com.usinasantafe.cvf.lib.StatusSend
import br.com.usinasantafe.cvf.lib.WEB_ALL_COLAB
import br.com.usinasantafe.cvf.lib.WEB_ALL_EQUIP
import br.com.usinasantafe.cvf.lib.WEB_ALL_FRONT
import br.com.usinasantafe.cvf.lib.WEB_ALL_RELEASE
import br.com.usinasantafe.cvf.lib.WEB_CHECK_NRO_EQUIP
import br.com.usinasantafe.cvf.lib.WEB_CHECK_REG_COLAB
import br.com.usinasantafe.cvf.lib.WEB_SAVE_MANAGER
import br.com.usinasantafe.cvf.lib.WEB_SAVE_TOKEN
import br.com.usinasantafe.cvf.presenter.MainActivity
import br.com.usinasantafe.cvf.presenter.theme.TAG_BUTTON_OK_ALERT_DIALOG_SIMPLE
import br.com.usinasantafe.cvf.presenter.view.configuration.password.TAG_PASSWORD_TEXT_FIELD_SCREEN
import br.com.usinasantafe.cvf.utils.TestConfig
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import kotlinx.coroutines.runBlocking
import kotlinx.coroutines.test.runTest
import okhttp3.mockwebserver.Dispatcher
import okhttp3.mockwebserver.MockResponse
import okhttp3.mockwebserver.MockWebServer
import okhttp3.mockwebserver.RecordedRequest
import org.junit.AfterClass
import org.junit.Before
import org.junit.BeforeClass
import org.junit.Rule
import org.junit.Test
import javax.inject.Inject
import kotlin.time.Duration.Companion.minutes

@HiltAndroidTest
class MenuConfigFlowTest {

    @get:Rule(order = 0)
    val hiltRule = HiltAndroidRule(this)

    @get:Rule(order = 1)
    val composeTestRule = createAndroidComposeRule<MainActivity>()

    @Inject
    lateinit var configSharedPreferencesDatasource: ConfigSharedPreferencesDatasource

    @Inject
    lateinit var colabDao: ColabDao

    @Inject
    lateinit var equipDao: EquipDao

    @Inject
    lateinit var frontDao: FrontDao

    @Inject
    lateinit var releaseDao: ReleaseDao

    @Inject
    lateinit var managerSharedPreferencesDatasource: ManagerSharedPreferencesDatasource

    companion object {

        private lateinit var mockWebServer: MockWebServer

        private val resultToken = """
            {
                "status": "success",
                "idServ": 1
            }
        """.trimIndent()

        private val resultColab = """
            {
                "status": "success",
                "data": [
                    {"reg":19759,"name":"ANDERSON DA SILVA DELGADO"},
                    {"reg":18017,"name":"RONALDO GOMES"}
                ]
            }
        """.trimIndent()

        private val resultEquip = """
            {
                "status": "success",
                "data": [
                    {"id":1,"nro":1,"cdOperClass":1,"descOperClass":"Equip1","type":1},
                    {"id":2,"nro":2,"cdOperClass":2,"descOperClass":"Equip2","type":1},
                    {"id":10,"nro":200,"cdOperClass":1,"descOperClass":"TRUCK","type":1},
                    {"id":13,"nro":1500,"cdOperClass":5,"descOperClass":"CART1","type":2},
                    {"id":104,"nro":250,"cdOperClass":5,"descOperClass":"CART2","type":2}
                ]
            }
        """.trimIndent()

        private val resultFront = """
            {
                "status": "success",
                "data": [
                    {"id":1,"cd":1,"description":"Front1"},
                    {"id":3,"cd":3,"description":"Front3"},
                    {"id":2,"cd":2,"description":"Front2"}
                ]
            }
        """.trimIndent()

        val resultRelease = """
            {
                "status": "success",
                "data": [
                  {"id":1,"nroOS":123456,"idPropAgr":1,"descPropAgr":"Release1","idFront":1},
                  {"id":2,"nroOS":234567,"idPropAgr":2,"descPropAgr":"Release2","idFront":2},
                  {"id":3,"nroOS":345678,"idPropAgr":3,"descPropAgr":"Release3","idFront":3},
                  {"id":4,"nroOS":456789,"idPropAgr":4,"descPropAgr":"Release4","idFront":2},
                  {"id":5,"nroOS":225687,"idPropAgr":2,"descPropAgr":"Release5","idFront":3}
                ]
            }
        """.trimIndent()

        private val resultManager = """
            {
                "status": "success",
                "idServ": 1
            }
        """.trimIndent()


        private val resultColabSingle = """
            {
                "status": "success",
                "data": {"reg":123456,"name":"João da Silva"}
            }
        """.trimIndent()

        private val resultTruckSingle = """
            {
                "status": "success",
                "data": {"id":10,"nro":200,"cdOperClass":1,"descOperClass":"TRUCK","type":1}
            }
        """.trimIndent()

        private val resultCart1Single = """
            {
                "status": "success",
                "data": {"id":13,"nro":1500,"cdOperClass":5,"descOperClass":"CART1","type":2}
            }
        """.trimIndent()

        private val resultCart2Single = """
            {
                "status": "success",
                "data": {"id":104,"nro":250,"cdOperClass":5,"descOperClass":"CART2","type":2}
            }
        """.trimIndent()

        @BeforeClass
        @JvmStatic
        fun setupClass() {

            val dispatcherSuccess: Dispatcher = object : Dispatcher() {
                @Throws(InterruptedException::class)
                override fun dispatch(request: RecordedRequest): MockResponse {
                    return when (request.path) {
                        "/$WEB_SAVE_TOKEN" -> MockResponse().setBody(resultToken)
                        "/$WEB_ALL_COLAB" -> MockResponse().setBody(resultColab)
                        "/$WEB_ALL_EQUIP" -> MockResponse().setBody(resultEquip)
                        "/$WEB_ALL_FRONT" -> MockResponse().setBody(resultFront)
                        "/$WEB_ALL_RELEASE" -> MockResponse().setBody(resultRelease)
                        "/$WEB_SAVE_MANAGER" -> MockResponse().setBody(resultManager)
                        "/$WEB_CHECK_REG_COLAB" -> MockResponse().setBody(resultColabSingle)
                        "/$WEB_CHECK_NRO_EQUIP" -> {
                            val body = request.body.readUtf8()
                            when {
                                body.contains("200") -> MockResponse().setBody(resultTruckSingle)
                                body.contains("1500") -> MockResponse().setBody(resultCart1Single)
                                body.contains("250") -> MockResponse().setBody(resultCart2Single)
                                else -> MockResponse().setResponseCode(404)
                            }
                        }
                        else -> MockResponse().setResponseCode(404)
                    }
                }
            }

            mockWebServer = MockWebServer()
            mockWebServer.dispatcher = dispatcherSuccess
            mockWebServer.start()

            BaseUrlModuleTest.url = mockWebServer.url("/").toString()
        }

        @AfterClass
        @JvmStatic
        fun tearDownClass() {
            mockWebServer.shutdown()
        }

    }

    @Before
    fun setup() {
        hiltRule.inject()
        TestConfig.skipPermissionRequest = true
        runBlocking {
            configSharedPreferencesDatasource.save(
                ConfigSharedPreferencesModel(
                    number = 16997417840,
                    password = "12345",
                    idServ = 1,
                    version = "1.0",
                    statusSend = StatusSend.STARTED,
                    flagUpdate = false,
                    tokenFCM = "TOKEN_FCM"
                )
            )
        }
    }

    @Test
    fun flow() =
        runTest(
            timeout = 10.minutes
        ) {

            Log.d("TestDebug", "Position 01")

            composeTestRule.waitUntilTimeout()

//            composeTestRule.onNodeWithTag(TAG_NUMBER_TEXT_FIELD_CONFIG_SCREEN)
//                .performTextInput("16997417840")
//            composeTestRule.onNodeWithTag(TAG_PASSWORD_TEXT_FIELD_CONFIG_SCREEN)
//                .performTextInput("12345")
            composeTestRule.onNodeWithText("SALVAR")
                .performClick()

            Log.d("TestDebug", "Position 02")

            composeTestRule.waitUntilTimeout()

            Log.d("TestDebug", "Position 03")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_BUTTON_OK_ALERT_DIALOG_SIMPLE)
                .performClick()

            Log.d("TestDebug", "Position 04")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("item_check_box_3")
                .performClick()

            Log.d("TestDebug", "Position 05")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("AVANÇAR")
                .performClick()

            Log.d("TestDebug", "Position 06")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("item_check_box_3")
                .performClick()

            Log.d("TestDebug", "Position 07")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("AVANÇAR")
                .performClick()

            Log.d("TestDebug", "Position 08")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 09")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_config")
                .performClick()

            Log.d("TestDebug", "Position 10")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("CANCELAR")
                .performClick()

            Log.d("TestDebug", "Position 11")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 12")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_config")
                .performClick()

            Log.d("TestDebug", "Position 13")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_PASSWORD_TEXT_FIELD_SCREEN)
                .performTextInput("12345")
            composeTestRule.onNodeWithText("OK")
                .performClick()

            Log.d("TestDebug", "Position 14")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("RETORNAR")
                .performClick()

            Log.d("TestDebug", "Position 15")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 16")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_config")
                .performClick()

            Log.d("TestDebug", "Position 17")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_PASSWORD_TEXT_FIELD_SCREEN)
                .performTextInput("12345")
            composeTestRule.onNodeWithText("OK")
                .performClick()

            Log.d("TestDebug", "Position 18")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("SALVAR")
                .performClick()

            Log.d("TestDebug", "Position 19")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_BUTTON_OK_ALERT_DIALOG_SIMPLE)
                .performClick()

            Log.d("TestDebug", "Position 20")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("RETORNAR")
                .performClick()

            Log.d("TestDebug", "Position 21")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("SALVAR")
                .performClick()

            Log.d("TestDebug", "Position 22")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_BUTTON_OK_ALERT_DIALOG_SIMPLE)
                .performClick()

            Log.d("TestDebug", "Position 23")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("item_check_box_3")
                .performClick()

            Log.d("TestDebug", "Position 24")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("AVANÇAR")
                .performClick()

            Log.d("TestDebug", "Position 25")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("item_check_box_5")
                .performClick()

            Log.d("TestDebug", "Position 26")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("AVANÇAR")
                .performClick()

            Log.d("TestDebug", "Position 27")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 28")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_front")
                .performClick()

            Log.d("TestDebug", "Position 29")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("CANCELAR")
                .performClick()

            Log.d("TestDebug", "Position 30")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 31")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_front")
                .performClick()

            Log.d("TestDebug", "Position 32")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_PASSWORD_TEXT_FIELD_SCREEN)
                .performTextInput("12345")
            composeTestRule.onNodeWithText("OK")
                .performClick()

            Log.d("TestDebug", "Position 33")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("RETORNAR")
                .performClick()

            Log.d("TestDebug", "Position 34")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 35")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_front")
                .performClick()

            Log.d("TestDebug", "Position 36")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_PASSWORD_TEXT_FIELD_SCREEN)
                .performTextInput("12345")
            composeTestRule.onNodeWithText("OK")
                .performClick()

            Log.d("TestDebug", "Position 37")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("AVANÇAR")
                .performClick()

            Log.d("TestDebug", "Position 38")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("RETORNAR")
                .performClick()

            Log.d("TestDebug", "Position 39")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("RETORNAR")
                .performClick()

            Log.d("TestDebug", "Position 40")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_BUTTON_OK_ALERT_DIALOG_SIMPLE)
                .performClick()

            Log.d("TestDebug", "Position 42")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("AVANÇAR")
                .performClick()

            Log.d("TestDebug", "Position 43")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("item_check_box_3")
                .performClick()

            Log.d("TestDebug", "Position 44")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("AVANÇAR")
                .performClick()

            Log.d("TestDebug", "Position 45")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 46")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_release")
                .performClick()

            Log.d("TestDebug", "Position 47")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("CANCELAR")
                .performClick()

            Log.d("TestDebug", "Position 48")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 49")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_release")
                .performClick()

            Log.d("TestDebug", "Position 50")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_PASSWORD_TEXT_FIELD_SCREEN)
                .performTextInput("12345")
            composeTestRule.onNodeWithText("OK")
                .performClick()

            Log.d("TestDebug", "Position 51")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("RETORNAR")
                .performClick()

            Log.d("TestDebug", "Position 52")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 53")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_release")
                .performClick()

            Log.d("TestDebug", "Position 54")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_PASSWORD_TEXT_FIELD_SCREEN)
                .performTextInput("12345")
            composeTestRule.onNodeWithText("OK")
                .performClick()

            Log.d("TestDebug", "Position 55")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("item_check_box_5")
                .performClick()

            Log.d("TestDebug", "Position 56")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("AVANÇAR")
                .performClick()

            Log.d("TestDebug", "Position 57")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("button_1")
                .performClick()
            composeTestRule.onNodeWithTag("button_2")
                .performClick()
            composeTestRule.onNodeWithTag("button_3")
                .performClick()
            composeTestRule.onNodeWithTag("button_4")
                .performClick()
            composeTestRule.onNodeWithTag("button_5")
                .performClick()
            composeTestRule.onNodeWithTag("button_6")
                .performClick()
            composeTestRule.onNodeWithTag("button_OK")
                .performClick()

            Log.d("TestDebug", "Position 58")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 59")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_config")
                .performClick()

            Log.d("TestDebug", "Position 60")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("CANCELAR")
                .performClick()

            Log.d("TestDebug", "Position 61")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 62")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_config")
                .performClick()

            Log.d("TestDebug", "Position 63")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_PASSWORD_TEXT_FIELD_SCREEN)
                .performTextInput("12345")
            composeTestRule.onNodeWithText("OK")
                .performClick()

            Log.d("TestDebug", "Position 64")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("RETORNAR")
                .performClick()

            Log.d("TestDebug", "Position 65")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu")
                .performClick()

            Log.d("TestDebug", "Position 66")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("tag_top_bar_menu_item_config")
                .performClick()

            Log.d("TestDebug", "Position 67")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_PASSWORD_TEXT_FIELD_SCREEN)
                .performTextInput("12345")
            composeTestRule.onNodeWithText("OK")
                .performClick()

            Log.d("TestDebug", "Position 68")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("SALVAR")
                .performClick()

            Log.d("TestDebug", "Position 69")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_BUTTON_OK_ALERT_DIALOG_SIMPLE)
                .performClick()

            Log.d("TestDebug", "Position 70")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("RETORNAR")
                .performClick()

            Log.d("TestDebug", "Position 71")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithText("SALVAR")
                .performClick()

            Log.d("TestDebug", "Position 72")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag(TAG_BUTTON_OK_ALERT_DIALOG_SIMPLE)
                .performClick()

            Log.d("TestDebug", "Position 73")

            composeTestRule.waitUntilTimeout()

            composeTestRule.onNodeWithTag("item_check_box_3")
                .performClick()

            Log.d("TestDebug", "Position 74")

            composeTestRule.waitUntilTimeout()

